try overflow fix

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   background: black;
+  overflow-x: hidden;
 }
 
 .grid {
@@ -83,6 +84,7 @@ body {
 }
 
 #description {
+  width: 50vw;
   max-width: 600px;
   margin: auto;
   pointer-events: auto;
